src/objects/Investigation__c.object
<CustomObject>
    <fields>
        <fullName>AD_Investigation_Aligned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>AD investigation that this CVD investigation is aligned to</description>
        <label>AD Investigation Aligned To</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 AND 2 AND 3</booleanFilter>
            <filterItems>
                <field>Investigation__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>AD</value>
            </filterItems>
            <filterItems>
                <field>Investigation__c.Petition_Commodity__c</field>
                <operation>equals</operation>
                <valueField>$Source.Petition_Commodity__c</valueField>
            </filterItems>
            <filterItems>
                <field>Investigation__c.Petition_Initiation_Signature__c</field>
                <operation>equals</operation>
                <valueField>$Source.Petition_Initiation_Signature__c</valueField>
            </filterItems>
            <infoMessage>The Product on both investigations must match as well</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Investigation__c</referenceTo>
        <relationshipLabel>Aligned CVD Investigations</relationshipLabel>
        <relationshipName>Investigations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Amended_Final_Signature__c</fullName>
        <description>Actual Amended Final Signature</description>
        <inlineHelpText>Actual Amended Final Signature</inlineHelpText>
        <label>Actual Amended Final Signature</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Amended_Prelim_Determination_Sig__c</fullName>
        <description>Actual Amended Preliminary Determination Signature</description>
        <inlineHelpText>Actual Amended Preliminary Determination Signature</inlineHelpText>
        <label>Actual Amended Prelim Determination Sig</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Final_Signature__c</fullName>
        <description>Actual Final Signature</description>
        <inlineHelpText>Actual Final Signature</inlineHelpText>
        <label>Actual Final Signature</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Preliminary_Signature__c</fullName>
        <description>Actual Preliminary Signature</description>
        <inlineHelpText>Actual Preliminary Signature</inlineHelpText>
        <label>Actual Preliminary Signature</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Amend_the_Preliminary_Determination__c</fullName>
        <description>Will you Amend the Preliminary Determination?</description>
        <inlineHelpText>Will you Amend the Preliminary Determination?</inlineHelpText>
        <label>Amend the Preliminary Determination?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Applicable_CBP_Instructions_Category__c</fullName>
        <description>hide if customs_instructions_yes_no is not TRUE; if customs_instructions_yes_no is TRUE, validation (must be completed before closing case); repeating (can be multiple types of CBP instructions associated with each combination of respondent/exporter/producer);</description>
        <label>Applicable CBP Instructions Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cash Deposit</fullName>
                </value>
                <value>
                    <fullName>Initiation</fullName>
                </value>
                <value>
                    <fullName>Liquidation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Refund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calc_Amended_Prelim_Determination_Sig__c</fullName>
        <description>Calculated Amended Preliminary Determination Signature</description>
        <inlineHelpText>Calculated Amended Preliminary Determination Signature</inlineHelpText>
        <label>Calc Amended Prelim Determination Sig</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Calculated_Amended_Final_Signature__c</fullName>
        <description>Calculated Amended Final Signature</description>
        <inlineHelpText>Calculated Amended Final Signature</inlineHelpText>
        <label>Calculated Amended Final Signature</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Calculated_Final_Signature__c</fullName>
        <description>Calculated Final Signature</description>
        <inlineHelpText>Calculated Final Signature</inlineHelpText>
        <label>Calculated Final Signature</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Calculated_ITC_Final_FR_Published__c</fullName>
        <description>Calculated ITC Final FR Published</description>
        <inlineHelpText>Calculated ITC Final FR Published</inlineHelpText>
        <label>Calculated ITC Final FR Published</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Calculated_ITC_Prelim_Determination__c</fullName>
        <description>Calculated ITC Prelim Determination</description>
        <inlineHelpText>Calculated ITC Prelim Determination</inlineHelpText>
        <label>Calculated ITC Prelim Determination</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Calculated_Order_FR_Signature__c</fullName>
        <description>Calculated Order FR Signature</description>
        <inlineHelpText>Calculated Order FR Signature</inlineHelpText>
        <label>Calculated Order FR Signature</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Calculated_Postponement_of_PrelimDeterFR__c</fullName>
        <description>Calculated Postponement of Preliminary Determination Federal Register Signature</description>
        <inlineHelpText>Calculated Postponement of Preliminary Determination Federal Register Signature</inlineHelpText>
        <label>Calculated Postponement of PrelimDeterFR</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Calculated_Prelim_Extension_Request_File__c</fullName>
        <description>Calculated Prelim Extension Request Filed</description>
        <inlineHelpText>Calculated Prelim Extension Request Filed</inlineHelpText>
        <label>Calculated Prelim Extension Request File</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Calculated_Preliminary_Signature__c</fullName>
        <description>Calculated Preliminary Signature</description>
        <inlineHelpText>Calculated Preliminary Signature</inlineHelpText>
        <label>Calculated Preliminary Signature</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Choose_Following_Respondent_Selection__c</fullName>
        <label>Choose Following Respondent Selection</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CBP Data</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Quantity and Value Questionnaire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Concurrence_to_DAS__c</fullName>
        <label>Concurrence to DAS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Countervailed_Programs__c</fullName>
        <description>hide if customs_instructions_yes_no is not TRUE; if customs_instructions_yes_no is TRUE, validation (must be completed before closing case); disable if Case Type (field &quot;type&quot;) = AD ME or AD NME; repeating (one Countervailed Programs per selection made from Applicable CPB Instructions)</description>
        <label>Countervailed Programs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Country_in_which_factors_were_valued__c</fullName>
        <description>&quot;hide if customs_instructions_yes_no is not TRUE; if customs_instructions_yes_no is TRUE, validation (must be completed before closing case); disable if Case Type (field &quot;&quot;type&quot;&quot;) = CVD; repeating (one Name of Country in which factors were valued per selection made from Applicable CPB Instructions)&quot;</description>
        <label>Country in which factors were valued</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Ecuador</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>Estonia</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Greece</fullName>
                </value>
                <value>
                    <fullName>Hungary</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Iran</fullName>
                </value>
                <value>
                    <fullName>Iraq</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Israel</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Kazakhstan</fullName>
                </value>
                <value>
                    <fullName>Kyrgyzstan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Est_ITC_Notification_to_DOC_of_Final_Det__c</fullName>
        <description>Estimated ITC Notification to DOC of Final Determination</description>
        <inlineHelpText>Estimated ITC Notification to DOC of Final Determination</inlineHelpText>
        <label>Est ITC Notification to DOC of Final Det</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Order_FR_Published__c</fullName>
        <description>Estimated Order FR Published</description>
        <inlineHelpText>Estimated Order FR Published</inlineHelpText>
        <label>Estimated Order FR Published</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Final_Extension_of_days__c</fullName>
        <description>Final Extension (# of days)</description>
        <inlineHelpText>Final Extension (# of days)</inlineHelpText>
        <label>Final Extension (# of days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Team_Meeting_Deadline__c</fullName>
        <label>Final Team Meeting Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Have_Custom_Instruction_been_sent__c</fullName>
        <label>Have Custom Instruction been sent?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ITC_Finding__c</fullName>
        <description>Order: Referenced from parent Investigation</description>
        <label>ITC Finding</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Materially Injured</fullName>
                </value>
                <value>
                    <fullName>Materially Retarded</fullName>
                </value>
                <value>
                    <fullName>Threatened with Injury</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ITC_Notification_to_DOC_of_Final_Determ__c</fullName>
        <description>ITC Official Notification to DOC of Final Determination</description>
        <inlineHelpText>ITC Official Notification to DOC of Final Determination</inlineHelpText>
        <label>ITC Notification to DOC of Final Determ</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Input_Date_of_Post_Prelim_Determ_Sig__c</fullName>
        <description>Input Date of Post Preliminary Determination Signature</description>
        <inlineHelpText>Input Date of Post Preliminary Determination Signature</inlineHelpText>
        <label>Input Date of Post Prelim Determ Sig</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Investigation_Name__c</fullName>
        <formula>Petition_Case_Number__c +&apos;--&apos;+ Name</formula>
        <label>Investigation Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Investigation_Number__c</fullName>
        <displayFormat>I-{000000}</displayFormat>
        <label>Investigation Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Investigation_Outcome__c</fullName>
        <label>Investigation Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DOC_Negative_Final_Termination_of_Investigation</fullName>
                    <label>DOC Negative Final -- Termination of Investigation</label>
                </value>
                <value>
                    <fullName>ITC_Negative_Final_Termination_of_Investigation</fullName>
                    <label>ITC Negative Final -- Termination of Investigation</label>
                </value>
                <value>
                    <fullName>ITC_Negative_Prelim_Termination_of_Investigation</fullName>
                    <label>ITC_Negative Prelim -- Termination of Investigation</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Petition_Withdrawn_After_Initiation</fullName>
                    <label>Petition Withdrawn After Initiation</label>
                </value>
                <value>
                    <fullName>Suspension_Agreement</fullName>
                    <label>Suspension Agreement</label>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issues_to_DAS__c</fullName>
        <label>Issues to DAS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <formula>HYPERLINK( LEFT($Api.Enterprise_Server_URL_390 , FIND(&apos;/services&apos;, $Api.Enterprise_Server_URL_390)) &amp; Id,  Investigation_Name__c, &apos;_self&apos;)</formula>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Litigation_Status__c</fullName>
        <label>Litigation Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Injunction</fullName>
                </value>
                <value>
                    <fullName>Litigation</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lotus_Notes_History_Data__c</fullName>
        <label>Lotus Notes History Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ministerial_Error_for_Prelim__c</fullName>
        <label>Ministerial Error for Prelim?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ministerial_Error_for_final__c</fullName>
        <label>Ministerial Error for final?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Due_to_DAS_Deadline_and_Timeline__c</fullName>
        <description>Next Due to DAS Deadline and Timeline</description>
        <inlineHelpText>Next Due to DAS Deadline and Timeline</inlineHelpText>
        <label>Next Due to DAS Deadline and Timeline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Major_AS_DAS_Deadline_and_Timeline__c</fullName>
        <description>Next Major AS/DAS Deadline and Timeline</description>
        <inlineHelpText>Next Major AS/DAS Deadline and Timeline</inlineHelpText>
        <label>Next Major AS/DAS Deadline and Timeline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Office_PM_Deadline_and_Timeline__c</fullName>
        <description>Next Office/PM Deadline and Timeline</description>
        <inlineHelpText>Next Office/PM Deadline and Timeline</inlineHelpText>
        <label>Next Office/PM Deadline and Timeline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Additional_Companies_Investiga__c</fullName>
        <description>Number of Additional Companies Investigated/Reviewed</description>
        <inlineHelpText>Number of Additional Companies Investigated/Reviewed</inlineHelpText>
        <label>Number of Additional Companies Investiga</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Companies_Requested__c</fullName>
        <description>Number of Companies Requested</description>
        <inlineHelpText>Number of Companies Requested</inlineHelpText>
        <label>Number of Companies Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Mandatory_Companies__c</fullName>
        <description>Number of Mandatory Companies</description>
        <inlineHelpText>Number of Mandatory Companies</inlineHelpText>
        <label>Number of Mandatory Companies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <label>Office</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Roman_Numerals</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Period_Covered_End_Date__c</fullName>
        <description>Period Covered - End Date</description>
        <inlineHelpText>Period Covered - End Date</inlineHelpText>
        <label>Period Covered - End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period_Covered_Start_Date__c</fullName>
        <description>Period Covered - Start Date</description>
        <inlineHelpText>Period Covered - Start Date</inlineHelpText>
        <label>Period Covered - Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Petition_Case_Number__c</fullName>
        <label>Petition Case Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Petition_Case_Type__c</fullName>
        <label>Petition Case Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Petition_Commodity__c</fullName>
        <label>Petition Commodity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cement and Ceramics</fullName>
                </value>
                <value>
                    <fullName>Chemicals and Allied Industries</fullName>
                </value>
                <value>
                    <fullName>Foodstuffs</fullName>
                </value>
                <value>
                    <fullName>Machinery and Automotive</fullName>
                </value>
                <value>
                    <fullName>Minerals</fullName>
                </value>
                <value>
                    <fullName>Other Metals and Articles of Metal</fullName>
                </value>
                <value>
                    <fullName>Other Mfg.</fullName>
                </value>
                <value>
                    <fullName>Paper and Paperboard</fullName>
                </value>
                <value>
                    <fullName>Plastics and Rubber</fullName>
                </value>
                <value>
                    <fullName>Steel-Related</fullName>
                </value>
                <value>
                    <fullName>Textiles</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Petition_Country__c</fullName>
        <label>Petition Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Petition_Initiation_Signature__c</fullName>
        <description>This is for either the Actual or Calculated Initiation Signature date from the Petition without any further calculation.  This is used in the lookup filter to align a CVD investigation with an AD investigation.</description>
        <label>Petition Initiation Signature</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Petition_Product__c</fullName>
        <label>Petition Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Petition__c</fullName>
        <label>Petition</label>
        <referenceTo>Petition__c</referenceTo>
        <relationshipLabel>Investigations</relationshipLabel>
        <relationshipName>Investigations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Prelim_Extension_of_days__c</fullName>
        <description>Prelim Extension (# of days)</description>
        <inlineHelpText>Prelim Extension (# of days)</inlineHelpText>
        <label>Prelim Extension (# of days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prelim_Team_Meeting_Deadline__c</fullName>
        <label>Prelim Team Meeting Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Range_of_Rates_Final_Amended__c</fullName>
        <label>Range of Rates - Final Amended</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Range_of_Rates_Final__c</fullName>
        <label>Range of Rates - Final</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Range_of_Rates_Prelim_Amended__c</fullName>
        <label>Range of Rates - Prelim Amended</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Range_of_Rates_Prelim__c</fullName>
        <label>Range of Rates - Prelim</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_Status__c</fullName>
        <description>Segment Status</description>
        <inlineHelpText>Segment Status</inlineHelpText>
        <label>Segment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Litigation Hold</fullName>
                </value>
                <value>
                    <fullName>Litigation</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Signature_of_Prelim_Postponement_FR__c</fullName>
        <description>Calculated Postponement of Preliminary Determination FR Signature</description>
        <inlineHelpText>Calculated Postponement of Preliminary Determination FR Signature</inlineHelpText>
        <label>Signature of Prelim Postponement FR</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Termination_of_Suspension_Gap_Period_Beg__c</fullName>
        <description>Termination of Suspension/Gap Period Begins</description>
        <inlineHelpText>Termination of Suspension/Gap Period Begins</inlineHelpText>
        <label>Termination of Suspension/Gap Period Beg</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Upstream_Subsidy_Allegation__c</fullName>
        <description>Upstream Subsidy Allegation?</description>
        <inlineHelpText>Upstream Subsidy Allegation?</inlineHelpText>
        <label>Upstream Subsidy Allegation?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Will_you_Amend_the_Final__c</fullName>
        <description>Will you Amend the Final?</description>
        <inlineHelpText>Will you Amend the Final?</inlineHelpText>
        <label>Will you Amend the Final?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Will_you_Issue_a_Post_Preliminary_Determ__c</fullName>
        <description>Will you Issue a Post Preliminary Determination?</description>
        <inlineHelpText>Will you Issue a Post Preliminary Determination?</inlineHelpText>
        <label>Will you Issue a Post Preliminary Determ</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <label>Investigation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Demo_List_View</fullName>
        <columns>Office__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Period_Covered_Start_Date__c</columns>
        <columns>Period_Covered_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>Demo List View</label>
    </listViews>
    <nameField>
        <displayFormat>I-{00000}</displayFormat>
        <label>Investigation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investigations</pluralLabel>
    <recordTypes>
        <fullName>AD</fullName>
        <active>true</active>
        <description>An anti dumping investigation</description>
        <label>AD</label>
    </recordTypes>
    <recordTypes>
        <fullName>CVD</fullName>
        <active>true</active>
        <description>A countervailing duties investigation</description>
        <label>CVD</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Bounded_Days_For_AD_Final_Extension</fullName>
        <active>true</active>
        <errorConditionFormula>And (
$RecordType.DeveloperName = &quot;AD&quot;, 
OR(Final_Extension_of_days__c &gt; 60, Final_Extension_of_days__c &lt; 0)
)</errorConditionFormula>
        <errorMessage>Final extension # of days on AD Investigation can only range from 1 to 60 days.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bounded_Days_For_AD_Prelim_Extension</fullName>
        <active>true</active>
        <errorConditionFormula>And (
$RecordType.DeveloperName = &quot;AD&quot;, 
OR(Prelim_Extension_of_days__c &gt; 50,  Prelim_Extension_of_days__c &lt; 0)
)</errorConditionFormula>
        <errorMessage>Preliminary extension # of days on AD Investigation can only range from 1 to 50 days.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bounded_Days_For_CVD_Final_Extension</fullName>
        <active>true</active>
        <errorConditionFormula>And (
$RecordType.DeveloperName = &quot;CVD&quot;, 
OR(Final_Extension_of_days__c &gt; 90, Final_Extension_of_days__c &lt; 0)
)</errorConditionFormula>
        <errorMessage>Final extension # of days on CVD Investigation can only range from 1 to 90 days.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bounded_Days_For_CVD_Prelim_Extension</fullName>
        <active>true</active>
        <errorConditionFormula>And (
$RecordType.DeveloperName = &quot;CVD&quot;, 
OR(Prelim_Extension_of_days__c &gt; 65, Prelim_Extension_of_days__c &lt; 0)
)</errorConditionFormula>
        <errorMessage>Preliminary extension # of days on CVD Investigation can only range from 1 to 65 days.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Calc_Amended_Prelim_Determination_Null</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( 
$RecordType.DeveloperName = &quot;CVD&quot;, 
ISPICKVAL(Amend_the_Preliminary_Determination__c , &quot;No&quot;), 
NOT(AND(ISBLANK( Calc_Amended_Prelim_Determination_Sig__c ))) 
)</errorConditionFormula>
        <errorMessage>If Amend the Preliminary Determination is &quot;No&quot;, then there should be null for Calculated Amended Preliminary Determination Signature field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Final_Extension_Null_If_False</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
$RecordType.DeveloperName = &quot;CVD&quot;, 
 ISPICKVAL( Upstream_Subsidy_Allegation__c , &quot;No&quot;),
 NOT(AND(ISBLANK( Final_Extension_of_days__c)))
)</errorConditionFormula>
        <errorMessage>If upstream subsidy allegation is &quot;No&quot; , then final extensions of day must be null.</errorMessage>
    </validationRules>
</CustomObject>